# serializer version: 1
# name: test_load_cellpack[bcif]
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
# name: test_load_cellpack[bcif].1
  '''
  0000_Cv0
  0001_Cv1
  0002_Cv10
  0003_Cv11
  0004_Cv12
  0005_Cv13
  0006_Cv2
  0007_Cv3
  0008_Cv4
  0009_Cv5
  0010_Cv6
  0011_Cv7
  0012_Cv8
  0013_Cv9
  0014_Ed0
  0015_Ed1
  0016_Ed2
  0017_Ed3
  0018_Ed4
  0019_Ed5
  0020_Ed6
  0021_Ed7
  0022_Ed8
  0023_Gb0
  0024_Gb1
  0025_Gb2
  0026_Gb3
  0027_Gg01
  0028_Gg02
  0029_Gg03
  0030_Gg04
  0031_Gg11
  0032_Gg12
  0033_Gg13
  0034_Gg14
  0035_Gh01
  0036_Gh02
  0037_Gh03
  0038_Gh04
  0039_Gi01
  0040_Gi02
  0041_Gi03
  0042_Gi04
  '''
# ---
# name: test_load_cellpack[bcif].2
  array([0, 0, 0, ..., 0, 0, 0])
# ---
# name: test_load_cellpack[bcif].3
  array([ 0,  0,  0, ..., 42, 42, 42])
# ---
# name: test_load_cellpack[bcif].4
  array([[  0.        ,  -7.13999987,   0.        ],
         [  7.13999987,   0.        ,   0.        ],
         [ -7.13999987,   0.        ,   0.        ],
         ...,
         [-12.15989971,   8.76469994,   0.42160001],
         [  9.06669998,  10.63199997,   0.75980002],
         [ 11.94419956,  -9.3682003 ,   1.43139994]])
# ---
# name: test_load_cellpack[bcif].5
  array([ True,  True,  True, ...,  True,  True,  True])
# ---
# name: test_load_cellpack[bcif].6
  array([[ 0.00000000e+00,  7.07106769e-01,  0.00000000e+00,
           7.07106769e-01],
         [ 5.00000000e-01,  5.00000000e-01,  5.00000000e-01,
          -5.00000000e-01],
         [ 5.00000000e-01, -5.00000000e-01,  5.00000000e-01,
           5.00000000e-01],
         ...,
         [ 7.01487005e-01,  4.04906034e-01,  5.86536646e-01,
           4.55009576e-05],
         [ 7.05665529e-01, -6.85177565e-01,  1.80241734e-01,
          -6.00241538e-06],
         [ 8.00045907e-01,  1.71272606e-01, -5.74966133e-01,
           2.35192019e-05]])
# ---
# name: test_load_cellpack[bcif].7
  array([], dtype=bool)
# ---
# name: test_load_cellpack[bcif].8
  tuple(
    5976,
    3,
  )
# ---
# name: test_load_cellpack[bcif].9
  array([[ -4.63553047,  -6.83358049,  -1.42563021],
         [ -4.62156296,  -6.83104753,  -1.42143738],
         [ -4.64345837,  -6.84242439,  -1.41681075],
         ...,
         [ -9.77712059, -11.38296318,   0.46058181],
         [ -9.77257061, -11.40224266,   0.45152059],
         [ -9.81226158, -11.42228317,   0.47280616]])
# ---
# name: test_load_cellpack[cif]
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
# name: test_load_cellpack[cif].1
  '''
  0000_Cv0
  0001_Cv1
  0002_Cv10
  0003_Cv11
  0004_Cv12
  0005_Cv13
  0006_Cv2
  0007_Cv3
  0008_Cv4
  0009_Cv5
  0010_Cv6
  0011_Cv7
  0012_Cv8
  0013_Cv9
  0014_Ed0
  0015_Ed1
  0016_Ed2
  0017_Ed3
  0018_Ed4
  0019_Ed5
  0020_Ed6
  0021_Ed7
  0022_Ed8
  0023_Gb0
  0024_Gb1
  0025_Gb2
  0026_Gb3
  0027_Gg01
  0028_Gg02
  0029_Gg03
  0030_Gg04
  0031_Gg11
  0032_Gg12
  0033_Gg13
  0034_Gg14
  0035_Gh01
  0036_Gh02
  0037_Gh03
  0038_Gh04
  0039_Gi01
  0040_Gi02
  0041_Gi03
  0042_Gi04
  '''
# ---
# name: test_load_cellpack[cif].10
  array([[-3.26238656e+00,  5.79956484e+00, -3.91330600e+00],
         [-3.26721239e+00,  5.80329418e+00, -3.89982200e+00],
         [-3.27092028e+00,  5.79015923e+00, -3.92088842e+00],
         ...,
         [ 1.17071695e+01, -9.58848190e+00,  1.12691484e-02],
         [ 1.17131033e+01, -9.60934925e+00,  9.27020703e-03],
         [ 1.16894846e+01, -9.62069416e+00,  5.10454848e-02]])
# ---
# name: test_load_cellpack[cif].2
  array([1, 1, 1, ..., 1, 1, 1])
# ---
# name: test_load_cellpack[cif].3
  array([23, 24, 25, ..., 42, 42, 42])
# ---
# name: test_load_cellpack[cif].4
  array([    0,     0,     0, ..., 18199, 18200, 18201])
# ---
# name: test_load_cellpack[cif].5
  array([[ 10.19999981,  10.19999981,   0.        ],
         [ 10.19999981,  10.19999981,   0.        ],
         [ 10.19999981,  10.19999981,   0.        ],
         ...,
         [ 11.47329998, -10.04710007,   0.33160001],
         [ 10.7361002 ,  -9.39120007,   0.33990002],
         [ 10.44810104,  -9.1335001 ,   0.33970001]])
# ---
# name: test_load_cellpack[cif].6
  array([ True,  True,  True, ...,  True,  True,  True])
# ---
# name: test_load_cellpack[cif].7
  array([[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,
           1.00000000e+00],
         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,
           1.00000000e+00],
         [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,
           1.00000000e+00],
         ...,
         [ 8.32493484e-01, -3.08766663e-01, -4.60030466e-01,
          -4.29944375e-05],
         [ 7.06966341e-01, -4.71753180e-01, -5.27019918e-01,
           6.62047751e-05],
         [ 7.06966341e-01, -4.71753180e-01, -5.27019918e-01,
           6.62047751e-05]])
# ---
# name: test_load_cellpack[cif].8
  array([], dtype=bool)
# ---
# name: test_load_cellpack[cif].9
  tuple(
    5987,
    3,
  )
# ---
